samples/_failures_safe/1761644858_62ec90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c81be44.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_5c81be44.c:145:9: error: expected declaration or statement at end of input
  145 |         lexer->column++;
      |         ^~~~~
./samples/SAFE/__tmp_5c81be44.c:145:9: error: expected declaration or statement at end of input
